Time related sync tweets (#10)